--- a/_config.yml
+++ b/_config.yml
@@ -225,6 +225,7 @@ plugins:
   - jekyll-paginate-v2
   - jekyll/scholar
   - jekyll-sitemap
+  - jekyll-redirect-from
   - jekyll-toc
   - jekyll-twitter-plugin
   - jemoji
