--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: S
+first_name: Sijia
 middle_name: 
 last_name: Chen
 email: sijia.chen@uconn.edu
